# zero-knowledge

polynomials/: Cargo.toml
polynomials/src/: fft.rs  fiat_shamir.rs  gkr_protocol.rs  lib.rs  main.rs  multi_linear.rs  prover.rs  shamir_secret_sharing.rs  transcript.rs  verifier.rs
polynomials/src/fiat_shamir_interactive/: prover.rs  verifier.rs
polynomials/src/fiat_shamir_non_interactive/: prover.rs  transcript.rs  verifier.rs
polynomials/src/interactive_sum_check/: prover.rs  transcript.rs  verifier.rs
protocols/: Cargo.toml
protocols/src/: fft.rs  fri.rs  fri_helper_functions.rs  fri_protocol.rs  gkr.rs  gkr_2_to_1_trick.rs  gkr_circuit.rs  gkr_final_check.rs  gkr_protocol.rs  gkr_sum_check.rs  interactive_sum_check.rs  kzg.rs  kzg_helper_functions.rs  lib.rs  merkle_tree.rs  multi_linear.rs  optimized_fri_protocol.rs  partial_sum_check.rs  product_poly.rs  shamir_secret_sharing.rs  sum_check.rs  transcript.rs
protocols/src/fiat_shamir_non_interactive/: prover.rs  transcript.rs  verifier.rs
protocols/src/fri/: fri_helper_functions.rs  fri_protocol.rs  optimized_fri_protocol.rs
protocols/src/gkr/: gkr_2_to_1_trick.rs  gkr_protocol.rs  partial_sum_check.rs  product_poly.rs  succinct_gkr.rs
protocols/src/interactive_sum_check/: prover.rs  transcript.rs  verifier.rs
protocols/src/kzg/: kzg_helper_functions.rs  kzg_protocol.rs  trusted_setup.rs
src/: get_degree.rs  interpolate.rs  lib.rs
src/evaluate/: sparse.rs
src/interpolate/: get_dense.rs
src/interpolate/get_dense/: interpolate.rs
zk_first_task/: Cargo.toml
zk_first_task/src/: lib.rs
(+5 files in other folders)
