[package]
name = "polynomials"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-377 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10.8"
sha3 = "0.10.8"
field-tracker = { git = "https://github.com/sublinearlabs/field-tracker/" }
